# vjepa2

./: .gitignore  pyproject.toml  requirements.txt  setup.py
notebooks/: vjepa2_demo.py
tests/: conftest.py  test_smoke.py
vjepa2_probes/: README.md  __init__.py  align.py  arrow_of_time.py  io.py  metrics.py  plotting.py  variants.py  vjepa2_adapter.py
